Refactor getNumberOfLessons enrolled from UI to Student